files/etc/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Sun Nov 19 04:11:50 2017
*nat
:PREROUTING ACCEPT [3:1213]
:INPUT ACCEPT [7:1453]
:OUTPUT ACCEPT [5:301]
:POSTROUTING ACCEPT [1:61]
:SHADOWSOCKS - [0:0]
-A PREROUTING -s 192.168.6.0/24 -p tcp -j SHADOWSOCKS
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o wlan0 -j MASQUERADE
-A SHADOWSOCKS -d 167.88.124.235/32 -j RETURN
-A SHADOWSOCKS -m set --match-set lan dst -j RETURN
-A SHADOWSOCKS -m set --match-set chnroute dst -j RETURN
-A SHADOWSOCKS -p tcp -m tcp --dport 22:1023 -j REDIRECT --to-ports 12345
-A SHADOWSOCKS -p udp -j REDIRECT --to-ports 12345
COMMIT
# Completed on Sun Nov 19 04:11:50 2017
# Generated by iptables-save v1.6.0 on Sun Nov 19 04:11:50 2017
*mangle
:PREROUTING ACCEPT [225:15236]
:INPUT ACCEPT [97:9504]
:FORWARD ACCEPT [128:5732]
:OUTPUT ACCEPT [68:4865]
:POSTROUTING ACCEPT [196:10597]
:SHADOWSOCKS - [0:0]
-A PREROUTING -s 192.168.6.0/24 -p tcp -j SHADOWSOCKS
-A SHADOWSOCKS -p udp -m udp --dport 53 -j TPROXY --on-port 12345 --on-ip 0.0.0.0 --tproxy-mark 0x1/0x1
COMMIT
# Completed on Sun Nov 19 04:11:50 2017
# Generated by iptables-save v1.6.0 on Sun Nov 19 04:11:50 2017
*filter
:INPUT ACCEPT [97:9504]
:FORWARD ACCEPT [128:5732]
:OUTPUT ACCEPT [68:4865]
COMMIT
# Completed on Sun Nov 19 04:11:50 2017
